spaceship movement logic added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div> </div>
+    <header>Space Invaders</header>
+    <div class="game-wrapper"></div>
+    <div class="game"></div>
+    
 
     <script src="script.js"></script>
 </body>
